<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".rodriguesActivitySemi">

        <ImageView
            android:id="@+id/brandon_ImageBoxS1"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/brandon_TextBoxS1"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.054"
            app:srcCompat="@drawable/semi1"
            android:contentDescription="@string/semi1" />

        <TextView
            android:id="@+id/brandon_TextBoxS1"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:gravity="center_vertical"
            android:text="@string/semi1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.054" />
        <CheckBox
            android:id="@+id/brandon_CheckBoxS1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/visit_v_p"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toEndOf="@+id/brandon_TextBoxS1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.024" />




        <ImageView
            android:id="@+id/brandon_ImageBoxS2"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brandon_ImageBoxS1"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/semi2"
            android:contentDescription="@string/semi2" />

        <TextView
            android:id="@+id/brandon_TextBoxS2"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:gravity="center_vertical"
            android:text="@string/semi2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brandon_TextBoxS1" />

        <CheckBox
            android:id="@+id/brandon_CheckBoxS2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:text="@string/visit_v_p"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.125"
            app:layout_constraintStart_toEndOf="@+id/brandon_TextBoxS2"
            app:layout_constraintTop_toBottomOf="@+id/brandon_CheckBoxS1"
            app:layout_constraintVertical_bias="0.047" />


        <ImageView
            android:id="@+id/brandon_ImageBoxS3"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brandon_ImageBoxS2"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/semi3"
            android:contentDescription="@string/semi3" />

        <TextView
            android:id="@+id/brandon_TextBoxS3"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:gravity="center_vertical"
            android:text="@string/semi3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brandon_TextBoxS2"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/brandon_CheckBoxS3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:text="@string/visit_v_p"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toEndOf="@+id/brandon_TextBoxS3"
            app:layout_constraintTop_toBottomOf="@+id/brandon_CheckBoxS2"
            app:layout_constraintVertical_bias="0.005" />

        <ImageView
            android:id="@+id/brandon_ImageBoxS4"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/brandon_TextBoxS4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/semi4"
            android:contentDescription="@string/semi4" />
        <TextView
            android:id="@+id/brandon_TextBoxS4"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:gravity="center_vertical"
            android:text="@string/semi4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brandon_TextBoxS3" />
        <CheckBox
            android:id="@+id/brandon_CheckBoxS4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:text="@string/visit_v_p"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.522"
            app:layout_constraintStart_toEndOf="@+id/brandon_TextBoxS4"
            app:layout_constraintTop_toBottomOf="@+id/brandon_CheckBoxS3"
            app:layout_constraintVertical_bias="0.09" />

        <Button
            android:id="@+id/brandon_SemiCheckout"
            android:layout_width="98dp"
            android:layout_height="45dp"
            android:text="@string/checkoutBttn"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>